@@ -1,3 +1,5 @@
+2017/03/15	Implement RFC 7772 Section 5.1.1, 5.1.2, defaulted to on. <Robin H. Johnson>
+
 2017/02/04	clang-format the code
 
 2017/02/01	Release v2.16
